# SeetaFaceEngine

./: .gitignore
FaceAlignment/: CMakeLists.txt
FaceAlignment/src/test/: face_alignment_test.cpp
FaceDetection/: CMakeLists.txt
FaceDetection/src/: face_detection.cpp
FaceIdentification/: CMakeLists.txt
FaceIdentification/src/test/: CMakeLists.txt  test_face_recognizer.cpp  test_face_verification.cpp
